--- a/index.html
+++ b/index.html
@@ -4,22 +4,15 @@
 <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <meta name="description" content="XposedOrNot : Breaches Timeline">
-   <meta name="author" content="Devanand Premkumar">
-   <meta content="XposedOrNot: Breaches Timeline" property="og:title" />
-   <meta property="og:title" content="XposedOrNot: Privacy Shield" />
+   <meta name="description" content="Secyourscan : Breaches Timeline">
+   <meta property="og:title" content="Secyourscan: Privacy Shield" />
    <meta property="og:description"
-      content="Learn about XposedOrNot's Privacy Shield policy and our commitment to data protection." />
-   <meta property="og:image" content="https://xposedornot.com/static/images/privacy_shield.png" />
-   <meta property="og:url" content="https://xposedornot.com/privacy-shield" />
+      content="Learn about Secyourscan's Privacy Shield policy and our commitment to data protection." /> 
    <meta property="og:type" content="website" />
    <meta name="twitter:card" content="summary_large_image">
-   <meta name="twitter:site" content="@XposedOrNot">
-   <meta name="twitter:title" content="XposedOrNot: Privacy Shield">
-   <meta name="twitter:description"
-      content="Learn about XposedOrNot's Privacy Shield policy and our commitment to data protection.">
-   <meta name="twitter:image" content="https://xposedornot.com/static/images/privacy_shield_twitter.png">
-   <title>XposedOrNot: Breaches Timeline</title>
+   <meta name="twitter:site" content="@Secyourscan">
+   <meta name="twitter:title" content="Secyourscan: Privacy Shield"> 
+   <title>Secyourscan: Breaches Timeline</title>
    <link rel="icon" href="favicon.ico" type="image/x-icon" />
    <link rel=stylesheet
       href='https://fonts.googleapis.com/css?family=Poppins%3A300%2C400%2C500%2C600%2C700%2C900&#038;subset'
@@ -35,18 +28,16 @@
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"></script>
-   <link href="/static/css/style.css" type="text/css" rel="stylesheet" defer>
-   <script src="/static/scripts/other-libraries.js" defer></script>
+   <link href="https://secyourscan.github.io/Email-Pwned/static/css/style.css" type="text/css" rel="stylesheet" defer>
+   <script src="https://secyourscan.github.io/Email-Pwned/static/scripts/other-libraries.js" defer></script>
 
 </head>
 
 <body>
    <div class="kbanner">
       <nav class="navbar navbar-expand-lg navbar-dark bg-primary kbanner">
-         <a class="navbar-brand" href="https://xposedornot.com"><span
-               style="font-size: 1.5em; font-weight: bold; display: block; color: white;">XposedOrNot</span>
-            <span style="font-size: 0.8em; display: block; color: white; opacity: 0.85; margin-top: -1px;">Community
-               Edition</span></a>
+         <a class="navbar-brand" href="https://secyourscan.github.io/Email-Pwned"><span
+               style="font-size: 1.5em; font-weight: bold; display: block; color: white;">Secyourscan</span> </a>
 
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,17 +53,7 @@
                   <a class="nav-link" href="api_doc.html">API &nbsp;</a>
                </li>
                <li class="nav-item active">
-                  <a class="nav-link" href="https://blog.xposedornot.com/">Blog &nbsp;</a>
-               </li>
-               <li class="nav-item dropdown active">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                     aria-haspopup="true" aria-expanded="false"> More Tools </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                     <a class="dropdown-item" href="xposed.html">Xposed Breaches</a>
-                     <a class="dropdown-item" href="shield.html">Privacy Shield</a>
-                     <a class="dropdown-item" href="domain.html">Domain Verification</a>
-                     <a class="dropdown-item" href="domains.html">Domain-level Search</a>
-                  </div>
+                  <a class="nav-link" href="https://blog.Secyourscan.com/">Blog &nbsp;</a>
                </li>
             </ul>
          </div>
@@ -85,7 +66,7 @@
       width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
    </div>
    <script defer async src="https://www.googletagmanager.com/gtag/js?id=UA-108891851-1"></script>
-   <script src="/static/scripts/common.js"></script>
+   <script src="https://secyourscan.github.io/Email-Pwned/static/scripts/common.js"></script>
 </body>
 
 </html>
